# gimp-help

./: .cvsignore  .directory  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  0012-replaced-You-can-image-with-You-can-imagine.patch  AUTHORS  ChangeLog  ChangeLog.pre-2-4  ChangeLog.pre-2-6  HACKING  INSTALL  MAINTAINERS  Makefile  Makefile.GNU  Makefile.am  NEWS  README  README.md  STATUS  TERMINOLOGY  TODO  TRANSLATING  acinclude.m4  authors.xml  autogen.sh  configure.ac  configure.in  documentation-guidelines.md  gimp-help-2.doap  gimp-help.doap  make.help  meson.build  mypatch.patch
help/C/: .cvsignore  Makefile.am  gimp.xml  glossary.xml  introduction.xml  not_yet_written.xml
html/: .cvsignore  meson.build
html/css/: gimp-help-plain.css  gimp-help-screen.css
html/en/: apcs02.html  apcs02s02.html  apcs02s03.html  apcs02s04.html  apcs02s05.html  apcs03.html  apcs04.html  become-a-gimp-wizard.html  bibliography.html  ch16s08s30.html  ch16s08s51.html  common-script-fu-errors.html  customize-splashscreen.html  dialogs.html  file-print-gtk.html  filters-animation.html  filters-artistic.html  filters-blur.html  filters-combine.html  filters-decor.html  filters-distort.html  filters-edge.html  filters-enhance.html  filters-generic.html  filters-light-and-shadow.html  filters-map.html  filters-noise.html  filters-render.html  filters-web.html  filters.html  font-problems.html  getting-started.html  gfdl-1.html  gfdl-10.html  gfdl-2.html  gfdl-3.html  gfdl-4.html  gfdl-5.html  gfdl-6.html  gfdl-7.html  (+610 more)
html/images/: meson.build
html/nl/: meson.build
images/: meson.build
images/C/: meson.build
images/callouts/: 19x19-1-19.xcf  28x28-1-14.xcf
images/common/: meson.build
images/using/: palette.xcf
pot/: gimp.pot  help-missing.pot  introduction.pot  key-reference-fr.pot  key-reference-it.pot  key-reference.pot  meson.build
pot/appendix/: bibliography.pot  bugs.pot  fdl.pot  history-20.pot  history-22.pot  history.pot
pot/concepts/: basic-setup.pot  brushes.pot  color-management.pot  concepts.pot  docks.pot  fonts-and-text.pot  gradients.pot  grid-and-guides.pot  image-types.pot  images-loading.pot  images.pot  imagewindow.pot  intro.pot  layer-modes.pot  layers.pot  palettes.pot  patterns.pot  plugins.pot  qmask.pot  script-fu.pot  selection.pot  setup.pot  toolbox.pot  undo.pot
pot/dialogs/: brushes-dialog.pot  buffers-dialog.pot  channel-dialog.pot  channel-menu.pot  channel-selection-mask.pot  color-dialog.pot  device-status-dialog.pot  dialogs-content.pot  dialogs-management.pot  dialogs-misc.pot  dialogs-structure.pot  dialogs_introduction.pot  document-dialog.pot  edit-template-dialog.pot  error-console.pot  export-file-dialog.pot  fonts-dialog.pot  gradient-dialog.pot  gradient-editor-dialog.pot  histogram-dialog.pot  images-dialog.pot  indexed-palette-dialog.pot  layer-dialog.pot  layer-mask.pot  navigation-dialog.pot  palettes-dialog.pot  path-dialog.pot  patterns-dialog.pot  pointer-dialog.pot  qmask.pot  sample-points.pot  templates-dialog.pot  tools-dialog.pot  undo-history-dialog.pot
pot/filters/: filters_alpha-to-logo.pot  filters_animation.pot  filters_artistic.pot  filters_blur.pot  filters_combine.pot  filters_decor.pot  filters_distort.pot  filters_edge-detect.pot  filters_enhance.pot  filters_generic.pot  filters_introduction.pot  filters_light-effects.pot  filters_map.pot  filters_noise.pot  filters_render.pot  filters_web.pot  meson.build
pot/glossary/: glossary.pot
pot/introduction/: whats-new.pot
pot/menus/: about-plugin-menuitems.pot  edit-buffer-dialog.pot  edit-clear.pot  edit-copy-visible.pot  edit-copy.pot  edit-cut.pot  edit-fade.pot  edit-fill-bg.pot  edit-fill-fg.pot  edit-fill-pattern.pot  edit-introduction.pot  edit-paste-as-brush.pot  edit-paste-as-new.pot  edit-paste-as-pattern.pot  edit-paste-as.pot  edit-paste-into.pot  edit-paste.pot  edit-redo.pot  edit-stroke-path.pot  edit-stroke-selection.pot  edit-undo-history.pot  edit-undo.pot  file-acquire.pot  file-close-all.pot  file-close.pot  file-create.pot  file-dialogs.pot  file-introduction.pot  file-keyboard-shortcuts.pot  file-new.pot  file-open-as-layer.pot  file-open-location.pot  file-open-recent.pot  file-open.pot  file-preferences.pot  file-print.pot  file-quit.pot  file-revert.pot  file-save-as-copy.pot  file-save-as-template.pot  (+155 more)
pot/preface/: authors.pot
pot/toolbox/: about-common-brush-options.pot  about-common-painting-options.pot  about-common-select-modifiers.pot  about-common-select-options.pot  about-common-transform-options.pot  intro.pot  meson.build  other-tools.pot  tool-airbrush.pot  tool-align.pot  tool-blend.pot  tool-brightness-contrast.pot  tool-brush.pot  tool-bucket-fill.pot  tool-by-color-select.pot  tool-clone.pot  tool-color-balance.pot  tool-color-picker.pot  tool-colorize.pot  tool-convolve.pot  tool-crop.pot  tool-curves.pot  tool-dodge-burn.pot  tool-ellipse-select.pot  tool-eraser.pot  tool-flip.pot  tool-foreground-select.pot  tool-free-select.pot  tool-fuzzy-select.pot  tool-heal.pot  tool-hue-saturation.pot  tool-ink.pot  tool-iscissors.pot  tool-levels.pot  tool-measure.pot  tool-move.pot  tool-paintbrush.pot  tool-path.pot  tool-pencil.pot  tool-perspective-clone.pot  (+18 more)
pot/tutorial/: quickies.pot  straight-lines.pot
pot/using/: animated-brushes.pot  brushes.pot  customize-splashscreen.pot  docks.pot  fileformats.pot  fonts-and-text.pot  getting-unstuck.pot  grid-and-guides.pot  layers.pot  paths.pot  photography.pot  qmask.pot  script-fu-gui-api.pot  script-fu-tutorial.pot  selections.pot  setup.pot  shortcuts.pot  simpleobjects.pot  variable-size-brush.pot  web.pot
quickreference/: .directory  .gitignore  Makefile.am  README  gimp-keys.xml  ja.po
quickreference/po/: bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fa.po  fi.po  fr.po  (+22 more)
src/: .cvsignore  .directory  Makefile.am  bugs.xml  dummy.xml  gimp.xml  glossary.xml  help-missing.xml  index.gimp  introduction.xml  key-reference-fr.xml  key-reference-it.xml  key-reference.xml  linkset.dtd  meson.build  not_yet_written.xml  preface.xml
(+9640 files in other folders)
